- Bugfix: Styling of the reference container when the footnote text was too long (thanks to Willem Braak, ???) - Bugfix: Added a Link to the footnote text in the reference container back to the footnote index in the page content (thanks to Willem Braak, ???)
git-svn-id: https://plugins.svn.wordpress.org/footnotes/trunk@931384 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/css/footnote.css
+++ b/css/footnote.css
@@ -70,16 +70,18 @@
 
 /* footnote (bottom) index */
 .footnote_plugin_index {
-    float: left !important;
+    /*float: left !important;*/
     min-width: 40px !important;
     white-space: nowrap !important;
     text-align: right !important;
+	display: inline-block;
 }
 
 /* footnote (bottom) text */
 .footnote_plugin_text {
-    float: left !important;
+    /*float: left !important;*/
     padding-left: 16px !important;
+	display: inline-block;
 }
 
 /* footnote (bottom) link to the footnote implementation */
@@ -96,12 +98,12 @@
 
 /* footnote (bottom) styling end tag */
 .footnote_plugin_end {
-    clear: left !important;
+    /*clear: left !important;*/
 }
 
 /* tooltip */
-.footnote_plugin_tooltip {
-    outline: none !important;
+.footnote_plugin_tooltip, .footnote_plugin_tooltip a {
+    /*outline: none !important;*/
     /*color: #4777ff !important;*/
     text-decoration: none !important;
     cursor: pointer !important;
